<resources>
    <string name="app_name">Alberto\'s Little Italy</string>
    <string name="action_settings">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_login">BENVENUTI</string>
    <string name="title_register">REGÍSTRATE</string>

    <string name="text_aceptar">ACEPTAR</string>
    <string name="text_cancelar">CANCELAR</string>
    <string name="text_tienescuenta">¿Ya tienes una cuenta?</string>

    <string name="login">INICIAR SESIÓN</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="password_remember"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="no_tienes_cuenta">¿NO TIENES UNA CUENTA?</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_nombre">Nombre(s)</string>
    <string name="hint_apellido">Apellido(s)</string>
    <string name="hint_sexo">Sexo</string>
    <string name="hint_fechanacimiento">Fecha de Nacimiento</string>
    <string name="hint_colonia">Colonia</string>

    <string name="leyendaterminos">Acepta Términos y Condiciones</string>
    <string name="leyendaleerterminos">Leer Términos y Condiciones</string>

    <string name="llevas">Llevas</string>
    <string name="visitas">Visita(s)</string>
    <string name="leyenda_acumula">Acumula 8 visitas para obtener una pizza GRATIS*</string>
    <string name="captura_codigo">CAPTURA TU CODIGO</string>
    <string name="pide_tu_pizza">PIDE TU PIZZA</string>
    <string name="cerrar_ventana">CERRAR VENTANA</string>
    <string name="registrar_premio">Registrar Pizza Cobrada</string>

    <string-array name="sexoArray">
        <item>Selecciona un Sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="title_activity_register">Regístrate</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_password_reminder">PasswordReminder</string>
    <string name="title_activity_pide_tu_pizza">PideTuPizza</string>
    <string name="title_activity_registrar_pizza">RegistrarPizza</string>
</resources>
