<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_app_2"
        >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/background_view">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="200dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo_app"
                    android:layout_marginTop="10dp"
                    />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_register"
                            android:id="@+id/titulo"
                            android:textColor="@color/accent"
                            android:textStyle="bold"
                            android:textSize="36dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp" />

                        <EditText
                            android:id="@+id/nombreText"
                            android:hint="@string/hint_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="text"
                            android:background="@color/accent"
                            android:ems="10"
                            android:layout_marginTop="10dp" />

                        <EditText
                            android:id="@+id/apellidosText"
                            android:hint="@string/hint_apellido"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="text"
                            android:background="@color/accent"
                            android:ems="10"
                            android:layout_marginTop="10dp" />

                        <Spinner
                            android:id="@+id/sexoSpinner"
                            android:entries="@array/sexoArray"
                            android:prompt="@string/hint_sexo"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/accent"
                            android:layout_marginTop="10dp"
                            android:spinnerMode="dropdown"
                            />

                        <EditText
                            android:id="@+id/fechaNacimientoText"
                            android:hint="@string/hint_fechanacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/accent"
                            android:layout_marginTop="10dp" />

                        <Spinner
                            android:id="@+id/coloniaSpinner"
                            android:prompt="@string/hint_colonia"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/accent"
                            android:layout_marginTop="10dp"
                            android:spinnerMode="dropdown"
                            />

                        <EditText
                            android:id="@+id/emailText"
                            android:hint="@string/hint_email"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textEmailAddress"
                            android:background="@color/accent"
                            android:ems="10"
                            android:layout_marginTop="10dp" />

                        <EditText
                            android:id="@+id/passwordText"
                            android:hint="@string/hint_password"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textPassword"
                            android:background="@color/accent"
                            android:ems="10"
                            android:layout_marginTop="10dp" />

                        <EditText
                            android:id="@+id/confirmarPasswordText"
                            android:hint="@string/hint_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textPassword"
                            android:background="@color/accent"
                            android:ems="10"
                            android:layout_marginTop="10dp" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/leyendaterminos"
                            android:id="@+id/chkTerminos"
                            android:checked="false"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:id="@+id/linkLeerTerminos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/leyendaleerterminos"
                            android:layout_gravity="right"
                            android:layout_marginRight="10dp"
                            />

                        <Button
                            android:id="@+id/btnAceptar"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:background="@color/primary_dark"
                            android:textColor="@color/text_color"
                            android:text="@string/text_aceptar"
                            android:layout_marginTop="15dp"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_tienescuenta"
                            android:id="@+id/textYaTieneCuenta"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center" />

                        <Button
                            style="?android:attr/buttonStyleSmall"
                            android:id="@+id/btnIniciarSesion"
                            android:background="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:layout_marginTop="0dp"
                            android:layout_gravity="center" />

                    </LinearLayout>

                </ScrollView>



            </LinearLayout>



    </LinearLayout>

</RelativeLayout>