<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_app"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutLogin"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-32dp"
            android:layout_marginBottom="25dp"
            android:background="@color/background_view">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/layoutLogin_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:id="@+id/titulo"
                        android:textColor="@color/accent"
                        android:textStyle="bold"
                        android:textSize="36dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="41dp" />

                    <EditText
                        android:id="@+id/emailText"
                        android:hint="@string/hint_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textEmailAddress"
                        android:background="@color/accent"
                        android:ems="10"
                        android:layout_marginTop="35dp" />

                    <EditText
                        android:id="@+id/passwordText"
                        android:hint="@string/hint_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword"
                        android:background="@color/accent"
                        android:ems="10"
                        android:layout_marginTop="25dp" />

                    <Button
                        android:id="@+id/btnAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@color/primary_dark"
                        android:textColor="@color/text_color"
                        android:text="@string/login"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:id="@+id/btnPasswordRemember"
                        android:background="@android:color/transparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_remember"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_tienes_cuenta"
                        android:id="@+id/textNoCuenta"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/btnRegistrar"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@color/primary_dark"
                        android:textColor="@color/text_color"
                        android:text="@string/title_register"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutUserLogged"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-32dp"
            android:layout_marginBottom="25dp"
            android:background="@color/background_view">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:id="@+id/titulo_logged"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:textSize="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="41dp" />

            <TextView
                android:id="@+id/nombreTextLogged"
                android:hint="@string/hint_nombre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/accent"
                android:ems="10"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="25dp" />

            <TextView
                android:id="@+id/emailTextLogged"
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textEmailAddress"
                android:background="@color/accent"
                android:ems="10"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="35dp" />

            <Button
                android:id="@+id/btnRegPizza"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/primary_dark"
                android:textColor="@color/text_color"
                android:text="@string/registrar_premio"
                android:layout_marginTop="25dp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/primary_dark"
                android:textColor="@color/text_color"
                android:text="@string/logout"
                android:layout_marginTop="25dp"
                android:layout_gravity="center" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>