<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_app_2"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/background_view">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="200dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_app"
                android:layout_marginTop="10dp"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Captura tu Email:"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="60dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/emailText"
                        android:hint="@string/hint_email"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:background="@color/accent"
                        android:ems="10"
                        android:layout_marginTop="10dp" />



                    <Button
                        android:id="@+id/btnAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@color/primary_dark"
                        android:textColor="@color/text_color"
                        android:text="@string/text_aceptar"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center_horizontal"
                        android:onClick="Enviar"/>

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:id="@+id/btnCancelar"
                        android:background="@color/primary_dark"
                        android:textColor="@color/text_color"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:text="@string/text_cancelar"
                        android:layout_marginTop="100dp"
                        android:layout_gravity="center_horizontal"
                        android:onClick="Cancelar"/>

                </LinearLayout>

            </ScrollView>



        </LinearLayout>



    </LinearLayout>

</RelativeLayout>